# cell-by-cell-code20-solver

./: .gitignore  Cargo.toml  README  out.txt  output.txt  shell.nix
renders/: solution_p10_s0_n107903432302639119859712.txt  solution_p10_s0_n1731880816769291900682240.txt  solution_p10_s0_n572099981149941530624.txt  solution_p10_s0_n6100335901997399802804961280.txt  solution_p10_s0_n7155921522786542026752.txt  solution_p1_s0_n756.txt  solution_p2_s0_n2416.txt  solution_p3_s0_n157208383315008.txt  solution_p4_s0_n159903488.txt  solution_p4_s0_n167531264.txt  solution_p5_s0_n96817142313984.txt  solution_p6_s0_n13326330703216500787269632.txt  solution_p6_s0_n14498594150357062265196544.txt  solution_p6_s0_n52470399697981733031936.txt  solution_p6_s0_n57661126749521910927360.txt  solution_p8_s0_n863680121223839744.txt
src/: ca.rs  checks.rs  handle_solution.rs  int.rs  int_using_u1024.rs  int_using_u128.rs  int_using_u256.rs  known.rs  main.rs  solver.rs  testing.rs
