[package]
name = "cell-by-cell"
version = "0.1.0"
edition = "2024"

[dependencies]
cgrustplot = "1.2.0"
env_logger = "0.11.8"
log = "0.4.27"
perf = "0.0.2"
rayon = "1.11.0"
sysinfo = "0.36.1"

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
panic = "abort"
overflow-checks = false
incremental = false
